truffle/src/com.oracle.truffle.sl.test/src/tests/error/InvalidAssignmentInBlock.sl
function double(x) {
  return 2 * x;
}

function main() {
  double(2) = 4;
}